version 0.9.3
- results of 'sort' and 'aggregate' now include key columns (if any)

version 0.9.2
- fixed CRAN issue: plots generated during tests would end up under inst/tinytest
  which is against CRAN policy. (Thanks to Kurt Hornik).

version 0.9.1
- Fixed nonstandard URL caught on CRAN
- Added ORCID, link to book in DESCRIPTION

version 0.9.0
- 'confront' now accepts a vector of 'key's (thanks to Luca Gramaglia for
   suggesting)
- new function 'run_validation_file' runs an R script while capturing output
  of 'confront' calls.
- Objects inheriting from 'confrontation' now store event metadata. See ?event.
- Objects of class 'validator' now store (default) metadata on expression 
  language and rule severity.
- Reference data passed to 'confront' can now be of any type (not just data.frame).
  This breaks code where both 'ref' and 'key' were submitted and reference data is
  expected to be matched with data under scrutiny.
- new helper functions: 'is_unique', 'all_unique', 'is_complete', 'all_complete'
- 'lbj_cells' object now has an (experimental) $plot() method.
- 'lbj_cells' and 'lbj_rules' have new slot 'label', to comply to 'lumberjack' update.
- Standard files for output by 'lbj_cells' and 'lbj_rules' now have 'lbj_' prefix.
- switched to 'tinytest' testing framework
- Fix in algorithm for clustering rules by shared variables #98.
- Fix in 'all' and 'any' methods for confrontation objects #92 (Thanks to 
  GitHub user 001ben for reporting).
- Fix: printing confront(data.frame(), validator()) would crash (thanks to Daniel Pritchard)


version 0.2.6
- New methods 'all' and 'any' for 'validation' objects
- New 'plot' method for 'validator' objects.
- New 'plot' method for 'validation' objects.
- New 'as.data.frame' methods for 'validatorComparison' and 'cellComparison' 
  objects.
- New 'plot' method for 'validatorComparison' and 'cellComparison' objects.
- New 'barplot' method for 'validatorComparison' and 'cellComparison' objects.