@@ -20,7 +20,7 @@ Description: Declare data validation rules and data quality indicators;
         analyzed for rule type and connectivity. See also Van der Loo
         and De Jonge (2018) <doi:10.1002/9781118897126>,
         chapter 6.
-Version: 0.9.2.1
+Version: 0.9.2.2
 Depends: R (>= 3.1.3), methods
 URL: https://github.com/data-cleaning/validate
 BugReports: https://github.com/data-cleaning/validate/issues
@@ -41,7 +41,6 @@ Collate:
     'compare.R'
     'factory.R'
     'lumberjack.R'
-    'prtmp.R'
     'retailers.R'
     'run_validation.R'
     'syntax.R'
