@@ -26,6 +26,8 @@ export(created)
 export(description)
 export(errors)
 export(event)
+export(exists)
+export(exists_one)
 export(export_yaml)
 export(expr)
 export(indicator)
